--- a/assets/src/style/variables.scss
+++ b/assets/src/style/variables.scss
@@ -30,6 +30,7 @@ $screen-sm:                                    479px;
 $screen-md:                                    767px;
 $screen-lg:                                    991px;
 $screen-xl:                                    1279px;
+$screen-xxl:                                   1920px;
 
 // containers
 $container-sm:                                 95%;
